<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:padding="20dp"
    android:gravity="center">

    <EditText
        android:id="@+id/utitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:hint="@string/utitle"
        android:inputType="text"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/ueditText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:hint="@string/description"
        android:textSize="20sp"
        android:inputType="textMultiLine"
        android:textColor="#000"
        android:autofillHints="" />

    <Button
        android:id="@+id/ubtn1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/update_note"
        android:textSize="25sp"
        android:background="@drawable/btnback"
        android:textColor="#fff"
        />
</LinearLayout>